# fastapi_geo

./: .$redis.drawio.bkp  .gitignore  add_cities.py  app.py  config.py  main.py  pyproject.toml  redis.drawio  settings.py  test.py
city/: city.py  redis_client.py  schemas.py
geo/: geo.py  redis_client.py  schemas.py
image/: router.py
utils/: image.py
