[project]
name = "fastapi-geo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-redis-cache>=0.2.5",
    "pillow>=11.1.0",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "uvicorn>=0.34.0",
]
